# AGS-AIchatbox

./: README.md  chatbot_ui.py  pyproject.toml  report.md
milvus-data/rdb_data/: IDENTITY  LOG  LOG.old.1749176879919754
milvus-data/rdb_data_meta_kv/: 000009.sst  IDENTITY  LOG  LOG.old.1749176879658824  MANIFEST-000010
src/: state.py
src/ags_ai_agent/: crew.py  main.py  test_milvus.py
src/ags_ai_agent/config/: agents.yaml  tasks.yaml
src/ags_ai_agent/tools/: custom_tool.py  vector_db.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1749177948185744  LOG.old.1749778395311462  LOG.old.1749832097085945  LOG.old.1749865183384727  LOG.old.1750389333960595  LOG.old.1750409275942883  LOG.old.1750430856500362  LOG.old.1750476628416429  LOG.old.1750496759179921  LOG.old.1750503453277518  LOG.old.1750598630610948  LOG.old.1750599883013329  LOG.old.1750603490768839  LOG.old.1750639192719787  LOG.old.1750946228519939  LOG.old.1750984800781044  MANIFEST-000109
volumes/milvus/rdb_data_meta_kv/: 000113.sst  IDENTITY  LOG  LOG.old.1749177947933257  LOG.old.1749778395004245  LOG.old.1749832096493368  LOG.old.1749865183119941  LOG.old.1750389333296883  LOG.old.1750409275624038  LOG.old.1750430856324070  LOG.old.1750476627935900  LOG.old.1750496758856845  LOG.old.1750503452786290  LOG.old.1750598630363975  LOG.old.1750599882889239  LOG.old.1750603490449890  LOG.old.1750639192498881  LOG.old.1750946227864095  LOG.old.1750984800463513  MANIFEST-000109
volumes/minio/.minio.sys/: format.json
(+9 files in other folders)
