[project]
name = "ags_ai_agent"
version = "0.1.0"
description = "ags-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ags_ai_agent = "ags_ai_agent.main:run"
run_crew = "ags_ai_agent.main:run"
train = "ags_ai_agent.main:train"
replay = "ags_ai_agent.main:replay"
test = "ags_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
